# SFML-Finding-Game

./: .gitignore  CMakeLists.txt  Makefile  SFML - Copy.cbp  SFML - Copy.depend  SFML - Copy.layout  SFML.depend  SFML.layout  main.cpp
include/: Game.h
include/Components/: AnimationComponent.h  MovementComponent.h
include/Entity/: Diamond.h  Entity.h  Player.h
include/States/: CreditsState.h  GameState.h  MainMenuState.h  State.h
include/UI/: Button.h  PauseMenu.h  TextTagSystem.h
shaders/: light1.frag  playerLight.frag  playerLight.vert
src/: Game.cpp
src/Components/: AnimationComponent.cpp  MovementComponent.cpp
src/Entity/: Diamond.cpp  Entity.cpp  Player.cpp
src/States/: CreditsState.cpp  GameState.cpp  MainMenuState.cpp  State.cpp
src/UI/: Button.cpp  PauseMenu.cpp  TextTagSystem.cpp
